--- a/assets/stylesheets/modules/_content-section.scss
+++ b/assets/stylesheets/modules/_content-section.scss
@@ -6,7 +6,7 @@
   position: absolute;
   top: 20%;
   visibility: hidden;
-  width: 60vw;
+  width: 60%;
 
   h3 {
     color: #b5b5b5;
