--- a/assets/stylesheets/modules/_sidebar-menu.scss
+++ b/assets/stylesheets/modules/_sidebar-menu.scss
@@ -5,7 +5,7 @@
   opacity: 0;
   top: 0;
   transition: 0.6s $ease 0.1s;
-  width: 40vw;
+  width: 40%;
 
   //body.pace-done & {
     opacity: 1;
